--- a/.gitignore
+++ b/.gitignore
@@ -55,11 +55,13 @@ cover/
 *.mo
 *.pot
 
+
 # Django stuff:
 *.log
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
+apps/*/migrations/*
 
 # Flask stuff:
 instance/
